Changelog: add time-of-day for each entry and fix viewport overflow issues
Changelog entries now display the actual time of day when each new version was tagged.
(All times displayed in-game are local.)

Also fixes issues where the changelog screen extended past the browser viewport
by changing the modal body `max-height` to use `rem` instead of `vh`.

--- a/index.html
+++ b/index.html
@@ -2605,7 +2605,7 @@
     <div id="version-modal" class="modal table-modal fade" role="dialog">
         <div class="modal-table-container">
             <div class="modal-cell-container">
-                <div class="bordered modal-dialog wide-modal-dialog">
+                <div class="bordered modal-dialog very-wide-modal-dialog">
                     <div class="bordered modal-dialog-surface">
                         <!-- Start of Modal Content -->
                         <div class="modal-content">
