--- a/editor source/SPNATI Character Editor/VersionHistory/v5.2.3.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.2.3.html
@@ -1,4 +1,5 @@
 ﻿<h3>Bug Fixes</h3>
 <ul>
-	<li>Characters with hyphens and periods appear again in the Target column of the dialogue tree.</li>
+	<li>Fixed characters with hyphens or periods not appearing in the Target column of the dialogue tree.</li>
+	<li>Fixed ArgumentOutOfRangeException when clicking the Dialogue tab for certain characters.</li>
 </ul>
