Enabled Moon's reskin for online play
Also resolved various validator warnings caused by her move to the the Character Editor and fixed reported grammar errors in dialogue.

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                 <option value="">(no filter)</option>
                 <option value="__general">The Inventory</option>
             </select>
-                <label style="color:black; background-color:white; padding:4px; border:double">The Collectibles feature is now in open beta testing. Please report any issues with specific collectibles to the via the character’s bug report function.</label>
+                <label style="color:black; background-color:white; padding:4px; border:double">The Collectibles feature is now in open beta testing. Please report any issues with specific collectibles via the character’s bug report function.</label>
             <div class="collectibles-pane bordered" id="collectibles-list-pane"></div>
             <div class="collectibles-pane bordered" id="collectibles-text-pane">
                 <h3 class="collectible-content text-center" id="collectible-title"></h3>
