Updates jQuery from version 1.11.3 to version 3.4.1.
SPNATI now no longer depends on code from April 2015, and has arrived at ~~the future~~ May 2019!

jQuery 3.x brings a smaller filesize, better performance, and perhaps more
importantly is actually officially supported and regularly updated.

Pretty much all of the API changes from 1.x to 3.x don't concern features that
SPNATI uses, but the important ones we may want to take notice of are:

 - jQuery Deferreds / Promises are now PRomises/A+ (read: ES6) compatible.
 - `.width()`, `.height()`, `.css("width")`, and `.css("height")` can return non-integer values
   (I don't think we even call these methods, and anyways none of our math explicitly depends on integer width/height values as far as I know.)
 - `.load()`, `.unload()`, and `.error()` removed
   (I don't think we use these methods anywhere; we either use `.on('load')` or directly set `.onload`)

--- a/index.html
+++ b/index.html
@@ -2864,16 +2864,16 @@
 
             <!-- Opponent Images -->
             <div id="game-image-area-1" class="left opponent-image-area">
-                <img id="game-image-1" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <img id="game-image-1" class="opponent-image" src="img/blank.png" alt="" style="display: none">
             </div>
             <div id="game-image-area-2" class="halfLeft opponent-image-area">
-                <img id="game-image-2" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <img id="game-image-2" class="opponent-image" src="img/blank.png" alt="" style="display: none">
             </div>
             <div id="game-image-area-3" class="halfRight opponent-image-area">
-                <img id="game-image-3" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <img id="game-image-3" class="opponent-image" src="img/blank.png" alt="" style="display: none">
             </div>
             <div id="game-image-area-4" class="right opponent-image-area">
-                <img id="game-image-4" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <img id="game-image-4" class="opponent-image" src="img/blank.png" alt="" style="display: none">
             </div>
 
             <!-- Hide and bug report buttons -->
@@ -3177,7 +3177,7 @@
     </script>
     <script src="js/sentry-5.7.0-bundle.min.js"></script>
 
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/js.cookie.js"></script>
     <script src="js/pako.min.js"></script>
