--- a/editor source/SPNATI Character Editor/VersionHistory/v5.2.7.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.2.7.html
@@ -1,4 +1,11 @@
 ﻿<h3>Bug Fixes</h3>
 <ul>
 	<li>Fixed crash in the Writing Aid when trying to respond to a situation that can no longer be linked to any dialogue.</li>
+	<li>Fixed issue with "play once" lines not being unique being editor sessions.</li>
+	<li>The Z Layer in the Advanced tab can now take a negative value.</li>
+	<li>Fixed issue with filter conditions where you could type fake values into the filter field and click create to crash. This could also happen if you tried filtering on "target" on a case that has no target.</li>
+	<li>Filtering on 0 of a certain opponent will no longer display that opponent in the dialogue tree's Target column.</li>
+	<li>Fixed issue where tooltips would appear on the label instead of the ? icon next to the label.</li>
+	<li>Fixed issue where targeted lines were not indexed properly. This would cause issues such as the Banter Wizard and Writing Aid not picking up lines from characters with names earlier in the alphabet. This will require a one-time slower launch in order to rebuild the index.</li>
+	<li>Fixed issue where characters that change gender (Lucina, Chihiro, etc.) would trigger false positives for validation warnings about being the wrong gender for a case.</li>
 </ul>
