Add Hand Quality to the patch notes

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.2.7.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.2.7.html
@@ -1,4 +1,9 @@
-﻿<h3>Bug Fixes</h3>
+﻿<h3>Dialogue</h3>
+<ul>
+	<li>Added a "Hand Quality" player condition for checking strengths of hands (ex. targeting a pair of fives vs a pair of twos).</li>
+</ul>
+
+<h3>Bug Fixes</h3>
 <ul>
 	<li>Fixed crash in the Writing Aid when trying to respond to a situation that can no longer be linked to any dialogue.</li>
 	<li>Fixed issue with "play once" lines not being unique being editor sessions.</li>
