Points: Add modal for tallying points gained at the end of a game

--- a/index.html
+++ b/index.html
@@ -3129,6 +3129,50 @@
     </div>
     <!-- End of Epilogue Screen -->
 
+    <!-- Start of Unlock Points Modal -->
+    <div id="points-modal" class="modal table-modal fade" role="dialog">
+        <div class="modal-table-container">
+            <div class="modal-cell-container">
+                <div class="bordered modal-dialog wide-modal-dialog">
+                    <div class="bordered modal-dialog-surface">
+                        <!-- Start of Modal Content -->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h3 class="modal-title text-center">The game is now over...</h3>
+                                <h5 class="modal-title text-center">You earned <span id="points-modal-earned-count"></span> [InsertNameHere]!</h5>
+                            </div>
+                            <div class="modal-body">
+                                <div class="modal-body-container" style="width:100%">
+                                    <div id="points-modal-divider">
+                                        <table id="points-modal-table" class="table table-bordered table-condensed">
+                                            <tbody id="point-intent-rows"></tbody>
+                                        </table>
+                                        <div id="points-modal-explanation">
+                                            <h4>What are [InsertNameHere]?</h4>
+                                            <p>[InsertNameHere] can be used to unlock bonus content, such as epilogues, alternate costumes, or other customization options!</p>
+                                        </div>
+                                    </div>
+                                    <p>You earn [InsertNameHere] every time you finish a game, win or lose.</p>
+                                    <p id="points-modal-tip"></p>
+                                </div>
+                            </div>
+                            <div class="modal-footer modal-footer-button-row">
+                                <button id="points-modal-feedback-button"
+                                    class="bordered smooth-button green modal-button points-modal-button"
+                                    onclick="showFeedbackReportModal($pointsModal)">Feedback?</button>
+                                <button id="points-modal-next-button"
+                                    class="bordered smooth-button modal-button points-modal-button"
+                                    onclick="doEpilogueModal()">Next</button>
+                            </div>
+                        </div>
+                        <!-- End of Modal Content -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Unlock Points Modal -->
+
     <!-- Start of Epilogue Choice Modal -->
     <div id="epilogue-modal" class="modal table-modal fade" role="dialog">
         <div class="modal-table-container">
@@ -3167,7 +3211,7 @@
             </div>
         </div>
     </div>
-    <!-- End of Options Modal -->
+    <!-- End of Epilogue Choice Modal -->
 
     <!-- Third Party JavaScript -->
 
