Highlighting: start working on new default suggestions UI

--- a/index.html
+++ b/index.html
@@ -506,21 +506,25 @@
                 <!-- Opponent Selections -->
                 <div class="bordered left opponent-area">
                     <div id="select-name-label-1" class="bordered name-label">Opponent 1</div>
+                    <button id="select-prefill-button-1" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-1" class="bordered smooth-button green select-slot-button"
                         onclick="selectOpponentSlot(1)">Select Opponent</button>
                 </div>
                 <div class="bordered halfLeft opponent-area">
                     <div id="select-name-label-2" class="bordered name-label">Opponent 2</div>
+                    <button id="select-prefill-button-2" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-2" class="bordered smooth-button green select-slot-button"
                         onclick="selectOpponentSlot(2)">Select Opponent</button>
                 </div>
                 <div class="bordered halfRight opponent-area">
                     <div id="select-name-label-3" class="bordered name-label">Opponent 3</div>
+                    <button id="select-prefill-button-3" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-3" class="bordered smooth-button green select-slot-button"
                         onclick="selectOpponentSlot(3)">Select Opponent</button>
                 </div>
                 <div class="bordered right opponent-area">
                     <div id="select-name-label-4" class="bordered name-label">Opponent 4</div>
+                    <button id="select-prefill-button-4" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-4" class="bordered smooth-button green select-slot-button"
                         onclick="selectOpponentSlot(4)">Select Opponent</button>
                 </div>
