Suggestions: fold targeting-suggestion UI code into MainSelectScreenDisplay

--- a/index.html
+++ b/index.html
@@ -364,28 +364,24 @@
                         <div id="opponent-suggestion-1-1" class="opponent-suggestion-cell opponent-suggestion-cell-1">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(1, 1)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-1-2" class="opponent-suggestion-cell opponent-suggestion-cell-2">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(1, 2)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                     <div class="opponent-suggestion-row">
                         <div id="opponent-suggestion-1-3" class="opponent-suggestion-cell opponent-suggestion-cell-3">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(1, 3)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-1-4" class="opponent-suggestion-cell opponent-suggestion-cell-4">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(1, 4)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                 </div>
@@ -398,28 +394,24 @@
                         <div id="opponent-suggestion-2-1" class="opponent-suggestion-cell opponent-suggestion-cell-1">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(2, 1)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-2-2" class="opponent-suggestion-cell opponent-suggestion-cell-2">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(2, 2)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                     <div class="opponent-suggestion-row">
                         <div id="opponent-suggestion-2-3" class="opponent-suggestion-cell opponent-suggestion-cell-3">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(2, 3)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-2-4" class="opponent-suggestion-cell opponent-suggestion-cell-4">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(2, 4)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                 </div>
@@ -432,28 +424,24 @@
                         <div id="opponent-suggestion-3-1" class="opponent-suggestion-cell opponent-suggestion-cell-1">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(3, 1)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-3-2" class="opponent-suggestion-cell opponent-suggestion-cell-2">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(3, 2)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                     <div class="opponent-suggestion-row">
                         <div id="opponent-suggestion-3-3" class="opponent-suggestion-cell opponent-suggestion-cell-3">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(3, 3)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-3-4" class="opponent-suggestion-cell opponent-suggestion-cell-4">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(3, 4)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                 </div>
@@ -466,28 +454,24 @@
                         <div id="opponent-suggestion-4-1" class="opponent-suggestion-cell opponent-suggestion-cell-1">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(4, 1)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-4-2" class="opponent-suggestion-cell opponent-suggestion-cell-2">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="bottom">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(4, 2)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                     <div class="opponent-suggestion-row">
                         <div id="opponent-suggestion-4-3" class="opponent-suggestion-cell opponent-suggestion-cell-3">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(4, 3)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                         <div id="opponent-suggestion-4-4" class="opponent-suggestion-cell opponent-suggestion-cell-4">
                             <img class="opponent-suggestion-image" src="img/blank.png" alt="" data-toggle="tooltip"
                                 data-placement="top">
-                            <button class="bordered opponent-suggestion-label smooth-button green"
-                                onclick="suggestionSelected(4, 4)">Name</button>
+                            <button class="bordered opponent-suggestion-label smooth-button green">Name</button>
                         </div>
                     </div>
                 </div>
