Highlighting: add badges for new characters and for alt costumes
Thanks to CorkyTheCactus, we now have shiny new icons for denoting
characters that are new and that have alternate costumes, similiarly to
how epilogues are denoted on the select screens.

To accomodate this, the layout of badges on the group select screen and
on opponent selection cards has been changed to a dynamic flexbox-based
layout, instead of using absolute positioning. This should ensure that
badges stack properly without having to play around with positioning
values.

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
           </div>
         </div>
 
-        <img class="badge-icon" src="img/epilogue_icon.png"/>
+        <img class="epilogue-badge-icon" src="img/epilogue_icon.png"/>
         <div class="selection-card-sidebar">
           <img class="layer-icon" src="img/testing-badge.png"/>
           <img class="status-icon" src="img/testing-badge.png"/>
@@ -901,8 +901,14 @@
             <!-- Opponent Images -->
             <div class="left opponent-image-area">
                 <img id="group-image-1" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <img id="group-badge-1" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available"
-                    hidden />
+                <div class="group-badge-bar">
+                    <img id="group-new-badge-1" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="group-badge-1" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-costume-badge-1" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
                 <img id="group-status-1" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-1" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
@@ -911,8 +917,14 @@
             </div>
             <div class="halfLeft opponent-image-area">
                 <img id="group-image-2" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <img id="group-badge-2" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available"
-                    hidden />
+                <div class="group-badge-bar">
+                    <img id="group-new-badge-2" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="group-badge-2" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-costume-badge-2" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
                 <img id="group-status-2" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-2" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
@@ -921,8 +933,14 @@
             </div>
             <div class="halfRight opponent-image-area">
                 <img id="group-image-3" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <img id="group-badge-3" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available"
-                    hidden />
+                <div class="group-badge-bar">
+                    <img id="group-new-badge-3" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="group-badge-3" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-costume-badge-3" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
                 <img id="group-status-3" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-3" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
@@ -931,8 +949,14 @@
             </div>
             <div class="right opponent-image-area">
                 <img id="group-image-4" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <img id="group-badge-4" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available"
-                    hidden />
+                <div class="group-badge-bar">
+                    <img id="group-new-badge-4" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="group-badge-4" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-costume-badge-4" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
                 <img id="group-status-4" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-4" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
