Suggestions: show badges above prefill-suggested characters
This just adds a small row where appropriate new-character, epilogue,
or alternate costume badges for suggested characters can go, up in the
space where a dialogue bubble would normally go.

This will hopefully communicate _why_ certain characters are suggested,
and also gives players a bit more of a reason to play suggested
characters.

As an aside, this wouldn't work with the old "suggested characters" UI
based on targeting: it's just too crowded to fit anything like this.

--- a/index.html
+++ b/index.html
@@ -355,6 +355,27 @@
                 <span id="select-dialogue-4" class="dialogue"></span>
             </div>
 
+            <div id="selection-badge-row-1" class="left selection-badge-row">
+                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
+            </div>
+            <div id="selection-badge-row-2" class="halfLeft selection-badge-row">
+                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
+            </div>
+            <div id="selection-badge-row-3" class="halfRight selection-badge-row">
+                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
+            </div>
+            <div id="selection-badge-row-4" class="right selection-badge-row">
+                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
+            </div>
+
             <!-- Opponent Images -->
             <div id="select-image-area-1" class="left opponent-image-area">
                 <img id="select-image-1" class="opponent-image" src="img/blank.png" alt="" hidden>
