--- a/editor source/SPNATI Character Editor/VersionHistory/v5.3.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.3.html
@@ -21,4 +21,5 @@
 	<li>Fixed crash when choosing a portrait for a reskin before actually creating the reskin's images.</li>
 	<li>Manually creating a variable test for something like Hand Quality and using a variable on the righthand side will no longer wipe out that value when coming back to the case.</li>
 	<li>Filtering on a target for a case with a gender or size requirement will now filter the target possibilities down to only those who meet the criteria.</li>
+	<li>Fixed issue where creating a new skin on a character that has not been opened previously in the current session would wipe out that character's .xml files.</li>
 </ul>
