--- a/editor source/SPNATI Character Editor/VersionHistory/v5.4.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.4.html
@@ -3,6 +3,11 @@
 	<li>The Preview Text box now displays italics and line breaks.</li>
 </ul>
 
+<h3>Dialogue</h3>
+<ul>
+	<li>A Pose condition has been added to filters, allowing you to target characters using a specific pose.</li>
+</ul>
+
 <h3>Bug Fixes</h3>
 <ul>
 	<li>Fixed issue with Time in Stage clearing itself when leaving a case.</li>
