Ended the Xmas event; enabled re-sort mode!
For a limited time, the Nightmare Before Christmas event skins are being left online as selectable alternatives, but the event characters' default skins have returned.

Additionally, re-sort mode has returned! The game itself will inform players about the re-sort poll after they've experienced it a predermined degree.

--- a/index.html
+++ b/index.html
@@ -1851,7 +1851,7 @@
                             </div>
                             <div class="modal-body">
                                 <h4>
-                                    The Summer 2019 Roster Resort is now live!
+                                    The Winter 2019 Roster Re-Sort is now live!
                                 </h4>
                                 <p>
                                     This re-sort poll will help determine the order of characters on the main selection
@@ -1865,9 +1865,9 @@
                                     You can vote in the Re-Sort Poll here:
                                 </p>
                                 <a class="bordered smooth-button green resort-link-button"
-                                    href="https://old.reddit.com/r/spnati/comments/cuu45j/roster_resort_poll_8_which_characters_do_you/"
+                                    href="https://old.reddit.com/r/spnati/comments/egnhr3/resort_ix_the_rise_of_resort/"
                                     target="_blank" rel="noreferrer">Roster
-                                    Re-Sort Poll 8</a>
+                                    Re-Sort Poll 9</a>
                             </div>
                             <div class="modal-footer">
                                 <button class="bordered smooth-button modal-button" data-dismiss="modal">Close</button>
