--- a/index.html
+++ b/index.html
@@ -2909,6 +2909,28 @@
                 <img id="game-image-4" class="opponent-image" src="img/blank.png" alt="" style="display: none">
             </div>
 
+	    <!-- Collectible unlocked buttons -->
+	    <div class="collectible-button-container left">
+                <button id="collectible-button-1" class="bordered collectible-button" data-toggle="tooltip" data-placement="right" title="Collectible unlocked! Click to view.">
+                    <img src="img/gallery.svg" alt="&#x1f3c6;">
+                </button>
+            </div>
+	    <div class="collectible-button-container halfLeft">
+                <button id="collectible-button-2" class="bordered collectible-button" data-toggle="tooltip" data-placement="right" title="Collectible unlocked! Click to view.">
+                    <img src="img/gallery.svg" alt="&#x1f3c6;">
+                </button>
+            </div>
+	    <div class="collectible-button-container halfRight">
+                <button id="collectible-button-3" class="bordered collectible-button" data-toggle="tooltip" data-placement="right" title="Collectible unlocked! Click to view.">
+                    <img src="img/gallery.svg" alt="&#x1f3c6;">
+                </button>
+            </div>
+	    <div class="collectible-button-container right">
+                <button id="collectible-button-4" class="bordered collectible-button" data-toggle="tooltip" data-placement="right" title="Collectible unlocked! Click to view.">
+                    <img src="img/gallery.svg" alt="&#x1f3c6;">
+                </button>
+            </div>
+
             <!-- Hide and bug report buttons -->
             <button class='bordered hide-table-button' onclick="toggleTableVisibility()">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
@@ -2938,9 +2960,6 @@
                     <button id="debug-button-1" class="bordered debug-button" onclick="selectDebug(1)" hidden>
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </button>
-                    <button id="collectible-button-1" class="bordered collectible-button">
-                        <img src="img/gallery.svg" alt="Collectible unlocked! Click to view.">
-                    </button>
                 </div>
                 <div id="game-opponent-area-2" class="optional-bordered halfLeft opponent-area" data-toggle="tooltip"
                     data-placement="top">
@@ -2958,9 +2977,6 @@
                     </button>
                     <button id="debug-button-2" class="bordered debug-button" onclick="selectDebug(2)" hidden>
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </button>
-                    <button id="collectible-button-2" class="bordered collectible-button">
-                        <img src="img/gallery.svg" alt="Collectible unlocked! Click to view.">
                     </button>
                 </div>
                 <div id="game-opponent-area-3" class="optional-bordered halfRight opponent-area" data-toggle="tooltip"
@@ -2980,9 +2996,6 @@
                     <button id="debug-button-3" class="bordered debug-button" onclick="selectDebug(3)" hidden>
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                     </button>
-                    <button id="collectible-button-3" class="bordered collectible-button">
-                        <img src="img/gallery.svg" alt="Collectible unlocked! Click to view.">
-                    </button>
                 </div>
                 <div id="game-opponent-area-4" class="optional-bordered right opponent-area" data-toggle="tooltip"
                     data-placement="top">
@@ -3000,9 +3013,6 @@
                     </button>
                     <button id="debug-button-4" class="bordered debug-button" onclick="selectDebug(4)" hidden>
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                    </button>
-                    <button id="collectible-button-4" class="bordered collectible-button">
-                        <img src="img/gallery.svg" alt="Collectible unlocked! Click to view.">
                     </button>
                 </div>
 
