Another temp commit for testing

--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,7 @@
                                         </tr>
 
 
-                                        <tr>
+                                        <tr id="player-finishing-effect-control">
                                             <td>
                                                 <h4 class="modal-title modal-left">Visual Finishing Effect</h4>
                                             </td>
