Extend test suite with ported tests from !11 and tests for MarkerOperation
- Ported over the `spniBehaviour.js` tests from !11, which includes extensive tests for checkMarker.
- Added unit tests for MarkerOperation. All methods should be covered.
- Added a new unit test for checkMarker in a multi-marker environment (using the new `<marker>` elements within States)

--- a/run-tests.html
+++ b/run-tests.html
@@ -61,6 +61,8 @@
         
         <script src="tests/fixtures.js"></script>
         <script src="tests/spniCore.js"></script>
+        <script src="tests/MarkerOperation.js"></script>
+        <script src="tests/spniBehaviour.js"></script>
         <script class="mocha-exec">
             mocha.run();
         </script>
