implementation of various feedback

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.5.html
@@ -3,6 +3,37 @@
 	<li>Once per version, the editor will now inform you when a new version is available.</li>
 </ul>
 
+<h3>Dialogue</h3>
+<ul>
+	<li>Day, month, and weekday checks have been added to the Game condition menu.</li>
+	<li>The variable test dropdown has been cleaned up. Things like ~target.costume~ should be accessed using Player > Target > Costume and filling in "Target" as the player.</li>
+	<li>~target.ifMale()~ can be used to conditionally output text based on the character's gender. (e.g. "~target.ifMale(he|she)~ lost again? What a loser.")</li>
+</ul>
+
+<h3>Epilogues</h3>
+<ul>
+	<li>Collapse All and Expand All buttons have been added to the Scene Explorer.</li>
+</ul>
+
+<h3>Collectibles</h3>
+<ul>
+	<li>The collectible limit is now enforced (1 free collectible plus 1 per 600 lines of dialogue).</li>
+</ul>
+
+<h3>Pose Lists</h3>
+<ul>
+	You can now leave a stage empty and it will skip that stage when creating the pose list. This effectively allows for making partial templates (ex. one template for stages 1-5, and another template for stage 6-8).
+</ul>
+
+<h3>Settings</h3>
+<ul>
+	<li>Hide Preview Images has been moved to a new Sidebar settings tab.</li>
+	<li>Show Text option has been moved to the Sidebar settings tab.</li>
+	<li>An option to disable preview text formatting has been added to the Sidebar settings tab. Unchecking this will display text without italics formatted like the editor would pre-5.4.</li>
+</ul>
+
 <h3>Bug Fixes</h3>
 <ul>
+	<li>Fixed issue where a character's gender could not be changed in the metadata after saving once.</li>
+	<li>Status attribute is no longer dropped from costume elements in meta.xml</li>
 </ul>
